--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/.html",
-    "build": "parcel build src/*.html"
+    "build": "parcel src/*.html"
   },
   "repository": {
     "type": "git",
